--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header id="header" class="header">
+        <div id="content_overlay"></div>
         <div class="header-container">
             <div class="branding">
                 <a href="#!">
@@ -22,22 +23,27 @@
                 <nav class="navigation-nav">
                     <ul class="navigation-list">
                         <li>
-                            <a href="#!">Home</a>
+                            <a href="#home">Home</a>
                         </li>
                         <li>
-                            <a href="#!">About us</a>
+                            <a href="#about">About us</a>
                         </li>
                         <li>
-                            <a href="#!">Our advantages</a>
+                            <a href="#advantage">Our advantages</a>
                         </li>
                         <li>
-                            <a href="#!">Meet the team</a>
+                            <a href="#team">Meet the team</a>
                         </li>
                         <li>
-                            <a href="#!">Contact us</a>
+                            <a href="#contact">Contact us</a>
                         </li>
                     </ul>
                 </nav>
+            </div>
+            <div id="mobile-menu" class="hamburger-menu">
+                <div class="line-menu"></div>
+                <div class="line-menu"></div>
+                <div class="line-menu"></div>
             </div>
         </div>
     </header>
@@ -56,7 +62,7 @@
                 <div class="about-content">
                     <div class="about-text">
                         <h2>About us</h2>
-                        <p>For six decades, <a href="#!" class="link">Nation Media Group</a> has run East Africa’s best-known newspapers and TV stations. Then it retooled as a modern tech company. There are great opportunities in digital content, meaning anything that informs, educates or entertains</p>
+                        <p>For six decades, <a href="#!" class="link">Nation Media Group</a> has run East Africa’s best-known newspapers and TV stations. Then it retooled as a modern content company. There are great opportunities in digital content, meaning anything that informs, educates or entertains</p>
                         <p>To capture the opportunities, N2 Ventures Africa was created as a self-standing venture arm of Nation Media. N2 builds, partners and invests in African start-ups, creating a transformative content ecosystem</p>
                         <p><em class="bold">Every day we reach millions of people and deploy incredible human talent to support new products. We are inventing the future of digital content in Africa</em></p>
                     </div>
