added favicons and meta tags

--- a/index.html
+++ b/index.html
@@ -2,8 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="theme-color" content="#99DBCF">
+    <meta name="msapplication-TileColor" content=#99DBCF">
+    <meta property="og:locale" content="en_GB">
+    <meta property="og:locale:alternate" content="en_US">
+    <meta property="og:type" content="website" />
+    <meta name="robots" content="index,follow">
+    <meta name="copyright" content="N2 Ventures Africa">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="canonical" href="" />
+    <meta name="author" content="N2 Ventures Africa" />
+    <meta content="N2 Ventures Africa" itemprop="sourceOrganization" name="source">
+    <meta name="description" content="N2 Ventures Africa builds, partners and invests in African start-ups, creating a transformative content ecosystem.">
+    <meta itemprop="name" content="N2 Ventures Africa builds, partners and invests in African start-ups, creating a transformative content ecosystem.">
+    <meta itemprop="description" content="N2 Ventures Africa builds, partners and invests in African start-ups, creating a transformative content ecosystem.">
+    <meta itemprop="author" itemtype="http://schema.org/Person" content="N2 Ventures Africa">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="">
+    <meta name="twitter:title" content="N2 Ventures Africa builds, partners and invests in African start-ups, creating a transformative content ecosystem.">
+    <meta name="twitter:description" content="N2 Ventures Africa builds, partners and invests in African start-ups, creating a transformative content ecosystem.">
+    <meta name="twitter:creator" content="">
+    <meta name="twitter:data1" content="N2 Ventures Africa builds, partners and invests in African start-ups, creating a transformative content ecosystem.">
+    <meta name="twitter:label1" content="author">
+    <meta name="twitter:data2" content="N2 Ventures Africa builds, partners and invests in African start-ups, creating a transformative content ecosystem.">
+    <meta name="twitter:label2" content="summary">
+    <meta property="og:title" content="N2 Ventures Africa builds, partners and invests in African start-ups, creating a transformative content ecosystem.">
+    <meta property="og:type" content="article">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="800">
+    <meta property="og:image:height" content="494">
+    <meta property="og:description" content="N2 Ventures Africa builds, partners and invests in African start-ups, creating a transformative content ecosystem.">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/favicons/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicons/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/favicons/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/favicons/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="images/favicons/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/favicons/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="images/favicons/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="fimages/favicons/avicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="images/favicons/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="images/favicons/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="images/favicons/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="images/favicons/favicon-128.png" sizes="128x128" />
+    <meta name="application-name" content="&nbsp;"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileImage" content="mstile-144x144.png" />
+    <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
     <title>N2 Ventures Africa</title>
     <link rel="stylesheet" href="css/frontend.css">
 </head>
