added new logos png

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="theme-color" content="#99DBCF">
-    <meta name="msapplication-TileColor" content=#99DBCF">
+    <meta name="theme-color" content="#000000">
+    <meta name="msapplication-TileColor" content=#000000">
     <meta property="og:locale" content="en_GB">
     <meta property="og:locale:alternate" content="en_US">
     <meta property="og:type" content="website" />
@@ -64,10 +64,10 @@
         <div class="header-container">
             <div class="branding">
                 <a href="#!">
-                    <img src="/images/logos/n2-logo.svg" alt="Ventures Africa" class="logo-white" />
+                    <img src="/images/logos/n2-logo.png" alt="Ventures Africa" class="logo-white" />
                 </a>
                 <a href="#!">
-                    <img src="/images/logos/n2-logo-black.svg" alt="Ventures Africa" class="logo-black" />
+                    <img src="/images/logos/n2-logo-black.png" alt="Ventures Africa" class="logo-black" />
                 </a>
             </div>
             <div class="navigation">
