made changes on content

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                             <h4 class="team-h4">Oliver August</h4>
                             <h5 class="team-h5">N2 lead</h5>
                             <div class="linkedin">
-                                <a href="#!" class="linkedin-link">
+                                <a href="https://www.linkedin.com/in/oliver-august-79664b75/?originalSubdomain=ke" target="_blank" class="linkedin-link">
                                     <span class="hide">LinkedIn</span>
                                 </a>
                             </div>
@@ -204,7 +204,7 @@
                             <h4 class="team-h4">Max Okeyo</h4>
                             <h5 class="team-h5">N2 innovator</h5>
                             <div class="linkedin">
-                                <a href="#!" class="linkedin-link">
+                                <a href="https://www.linkedin.com/in/maxokeyo/?originalSubdomain=ke" target="_blank" class="linkedin-link">
                                     <span class="hide">LinkedIn</span>
                                 </a>
                             </div>
@@ -216,9 +216,9 @@
                         </div>
                         <div class="team-dec">
                             <h4 class="team-h4">Stephen Gitagama</h4>
-                            <h5 class="team-h5">N2 director</h5>
+                            <h5 class="team-h5">Director</h5>
                             <div class="linkedin">
-                                <a href="#!" class="linkedin-link">
+                                <a href="https://www.linkedin.com/in/stephen-gitagama-73ba3423/?originalSubdomain=ke" target="_blank" class="linkedin-link">
                                     <span class="hide">LinkedIn</span>
                                 </a>
                             </div>
@@ -230,7 +230,7 @@
                         </div>
                         <div class="team-dec">
                             <h4 class="team-h4">Al-Noor Ramji</h4>
-                            <h5 class="team-h5">N2 director</h5>
+                            <h5 class="team-h5">Director</h5>
                             <div class="linkedin">
                                 <a href="#!" class="linkedin-link">
                                     <span class="hide">LinkedIn</span>
@@ -244,7 +244,7 @@
                         </div>
                         <div class="team-dec">
                             <h4 class="team-h4">Dennis Aluanga</h4>
-                            <h5 class="team-h5">N2 director</h5>
+                            <h5 class="team-h5">Director</h5>
                             <div class="linkedin">
                                 <a href="#!" class="linkedin-link">
                                     <span class="hide">LinkedIn</span>
@@ -258,9 +258,9 @@
                         </div>
                         <div class="team-dec">
                             <h4 class="team-h4">Stephen Dunbar-Johnson</h4>
-                            <h5 class="team-h5">N2 director</h5>
+                            <h5 class="team-h5">Director</h5>
                             <div class="linkedin">
-                                <a href="#!" class="linkedin-link">
+                                <a href="https://www.linkedin.com/in/stephen-dunbar-johnson/" target="_blank" class="linkedin-link">
                                     <span class="hide">LinkedIn</span>
                                 </a>
                             </div>
