added about content changes

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="about-content">
                     <div class="about-text">
                         <h2>About us</h2>
-                        <p>For six decades, <a href="https://www.nationmedia.com" target="_blank" class="link">Nation Media Group</a> has run East Africa’s best-known newspapers and TV stations. Then it retooled as a modern content company. There are great opportunities in digital content, meaning anything that informs, educates or entertains</p>
+                        <p>For six decades, <a href="https://www.nationmedia.com" target="_blank" class="link">Nation Media Group</a> has been the largest media company in East & Central Africa. Then it retooled as a modern content company. There are great opportunities in digital content, meaning anything that informs, educates or entertains</p>
                         <p>To capture the opportunities, N2 Ventures Africa was created as a self-standing venture arm of Nation Media. N2 builds, partners and invests in African start-ups, creating a transformative content ecosystem</p>
                         <p><em class="bold">Every day we reach millions of people and deploy incredible human talent to support new products. We are inventing the future of digital content in Africa</em></p>
                     </div>
