added links for linkedin profiles

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                             <h4 class="team-h4">Al-Noor Ramji</h4>
                             <h5 class="team-h5">Director</h5>
                             <div class="linkedin">
-                                <a href="#!" class="linkedin-link">
+                                <a href="https://www.linkedin.com/in/al-noor-ramji-88b64141/?originalSubdomain=uk" target="_blank" class="linkedin-link">
                                     <span class="hide">LinkedIn</span>
                                 </a>
                             </div>
@@ -246,7 +246,7 @@
                             <h4 class="team-h4">Dennis Aluanga</h4>
                             <h5 class="team-h5">Director</h5>
                             <div class="linkedin">
-                                <a href="#!" class="linkedin-link">
+                                <a href="https://www.nationmedia.com/team/mr-dennis-aluanga/" target="_blank" class="linkedin-link">
                                     <span class="hide">LinkedIn</span>
                                 </a>
                             </div>
