--- a/index.html
+++ b/index.html
@@ -266,6 +266,34 @@
                             </div>
                         </div>
                     </div>
+                    <div class="team-item">
+                        <div class="team-image">
+                            <img src="images/team/kudrat_sehga.png" alt="Kudrat Sehgal" />
+                        </div>
+                        <div class="team-dec">
+                            <h4 class="team-h4">Kudrat Sehgal</h4>
+                            <h5 class="team-h5">Product manager</h5>
+                            <div class="linkedin">
+                                <a href="https://ke.linkedin.com/in/kudrat-sehgal-3057543" target="_blank" class="linkedin-link">
+                                    <span class="hide">LinkedIn</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team-item">
+                        <div class="team-image">
+                            <img src="images/team/rehema_juma.png" alt="Rehema Juma" />
+                        </div>
+                        <div class="team-dec">
+                            <h4 class="team-h4">Rehema Juma</h4>
+                            <h5 class="team-h5">Product manager</h5>
+                            <div class="linkedin">
+                                <a href="https://ke.linkedin.com/in/rehema-juma-42202ab" target="_blank" class="linkedin-link">
+                                    <span class="hide">LinkedIn</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -341,7 +369,7 @@
                 console.error(JSON.parse(response));
               }
             };    
-          };
+            };
         })();
       </script>
         <!-- Lambda Function Serverless -->
