--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         </div>
                         <div class="team-dec">
                             <h4 class="team-h4">Kudrat Sehgal</h4>
-                            <h5 class="team-h5">Product manager</h5>
+                            <h5 class="team-h5">Lead – product innovation</h5>
                             <div class="linkedin">
                                 <a href="https://ke.linkedin.com/in/kudrat-sehgal-3057543" target="_blank" class="linkedin-link">
                                     <span class="hide">LinkedIn</span>
