--- a/index.html
+++ b/index.html
@@ -297,6 +297,33 @@
                 </div>
             </div>
         </section>
+        <section id="video" class="video-section">
+            <div class="container">
+                <div class="video-content">
+                    <video
+                        id="my-video"
+                        class="video-js"
+                        controls
+                        preload="auto"
+                        width="640"
+                        height="264"
+                        poster=""
+                        data-setup="{}"
+                        preload="metadata"
+                    >
+                        <source src="https://s3.eu-west-1.amazonaws.com/n2ventures.africa/N2-Ventures.mp4#t=0.5" type="video/mp4" />
+                        <source src="https://s3.eu-west-1.amazonaws.com/n2ventures.africa/N2-Ventures.mpd#t=0.5" type="application/dash+xml" />
+                        <p class="vjs-no-js">
+                        To view this video please enable JavaScript, and consider upgrading to a
+                        web browser that
+                        <a href="https://videojs.com/html5-video-support/" target="_blank"
+                            >supports HTML5 video</a
+                        >
+                        </p>
+                    </video>
+                </div>
+            </div>
+        </section>
         <section id="contact" class="contact">
             <div class="container">
                 <div class="contact-content">
