--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
                         data-setup="{}"
                         preload="metadata"
                     >
-                        <source src="https://s3.eu-west-1.amazonaws.com/n2ventures.africa/N2-Ventures.mp4#t=0.5" type="video/mp4" />
-                        <source src="https://s3.eu-west-1.amazonaws.com/n2ventures.africa/N2-Ventures.mpd#t=0.5" type="application/dash+xml" />
+                        <source src="http://d1xy6kt4gzryz9.cloudfront.net/N2-Ventures.mp4#t=0.5" type="video/mp4" />
+                        <source src="http://d1xy6kt4gzryz9.cloudfront.net/N2-Ventures.mpd#t=0.5" type="application/dash+xml" />
                         <p class="vjs-no-js">
                         To view this video please enable JavaScript, and consider upgrading to a
                         web browser that
